--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,12 +2,13 @@
     <string name="app_name">SmartCrack</string>
     <string name="title_activity_my">MyActivity</string>
     <string name="login_button">登录</string>
-    <string name="add">Add</string>
+    <string name="log_out">登出</string>
     <string name="remove">Remove</string>
-    <string name="title_activity_second">SecondActivity</string>
+    <string name="title_activity_second">主页</string>
     <string name="button_2">Button 2</string>
-    <string name="login_title">员工登录</string>
-    <string name="login_account_hint">请输入账户</string>
+    <string name="login_title">系统登录</string>
+    <string name="login_account_hint">请输入用户名</string>
     <string name="login_password_hint">请输入密码</string>
     <string name="take_photo">Take Photo</string>
+    <string name="save_info">保存用户名和密码</string>
 </resources>
